--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -23,10 +23,10 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 400;
+  font-size: 1.5rem;
+  font-weight: 1000;
   line-height: 1.5;
-  color: #212529;
+  color: #070707;
   text-align: left;
   background-color: #fff; }
 
@@ -45,7 +45,9 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem; 
+  color: #200d0d
+}
 
 abbr[title],
 abbr[data-original-title] {
@@ -74,7 +76,7 @@ ul ol {
   margin-bottom: 0; }
 
 dt {
-  font-weight: 700; }
+  font-weight: 1000; }
 
 dd {
   margin-bottom: .5rem;
@@ -104,7 +106,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #007bff;
+  color: #2e20f5;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
